--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html {
   background: #cacaca;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: bold;
+  font-size: 2em;
 }
 
 button {
