API headers implementados

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ html {
 }
 
 button {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: lighter;
   background-color: #a2bdb4;
   border: 1px solid #7b9371;
   border-radius: 4px;
