--- a/style.css
+++ b/style.css
@@ -1,14 +1,70 @@
 html {
   background: #cacaca;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
-  font-size: 1.6em;
 }
 
 button {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-weight: lighter;
+  font-weight: bolder;
+  font-size: .8em;
   background-color: #a2bdb4;
   border: 1px solid #7b9371;
   border-radius: 4px;
+}
+
+#randomMichis {
+  display: flex;
+  font-weight: lighter;
+  border-radius: 4px;
+}
+
+#uploadingMichi {
+  display: flex;
+  font-weight: lighter;
+  border-radius: 4px;
+}
+
+#favouriteMichis {
+  display: flex;
+  font-weight: lighter;
+  border-radius: 4px;
+}
+
+article {
+  background-color: #d5d1d1;
+  display: flex;
+  align-items: center;
+}
+
+.custom-file-upload {
+  width: 260px;
+  height: 50px;
+  border-radius: 2px;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #a2bdb4;
+  opacity: 0.6;
+  color: rgb(65, 65, 132);
+  transition: .4s;
+  margin: 0;
+}
+
+#preview {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  box-shadow: 0 10px 20px -6px rgb(95, 93, 93);
+}
+
+.random-cat-button {
+  background-color: #cacaca;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 2px;
+  /* color: rgb(65, 65, 132); */
+  font-size: 20px;
+  cursor: pointer;
+  transition: .4s;
 }
